--- a/package.json
+++ b/package.json
@@ -5,19 +5,20 @@
   "main": "index.js",
   "scripts": {
     "http-server": "npx http-server -p 9001",
-        "dev": "vite",
-        "build": "vite build",
-        "serve": "vite preview",
-        "htmlhint": "npx htmlhint public src || exit 0",
-        "stylelint": "npx stylelint **/*.css || exit 0",
-        "stylelint:fix": "npx stylelint --fix **/*.css || exit 0",
-        "eslint": "npx eslint . || exit 0",
-        "eslint:fix": "npx eslint --fix . || exit 0",
-        "jsdoc": "npx jsdoc -c .jsdoc.json || exit 0",
-        "lint": "npm run htmlhint && npm run stylelint && npm run eslint",
-        "test": "npm run lint",
-        "clean": "rm -rf build/",
-        "clean-all": "npm run clean && rm -rf node_modules/ && rm -f package-lock.json"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
+    "htmlhint": "npx htmlhint public src || exit 0",
+    "stylelint": "npx stylelint **/*.css || exit 0",
+    "stylelint:fix": "npx stylelint --fix **/*.css || exit 0",
+    "eslint": "npx eslint . || exit 0",
+    "eslint:fix": "npx eslint --fix . || exit 0",
+    "jsdoc": "npx jsdoc -c .jsdoc.json || exit 0",
+    "lint": "npm run htmlhint && npm run stylelint && npm run eslint",
+    "test": "npm run lint",
+    "clean": "rm -rf build/",
+    "clean-all": "npm run clean && rm -rf node_modules/ && rm -f package-lock.json",
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -35,5 +36,15 @@
     "stylelint": "^16.2.1",
     "stylelint-config-recommended": "^14.0.0",
     "vite": "^5.0.12"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "express-session": "^1.18.0",
+    "mongoose": "^8.1.1",
+    "nodemon": "^3.0.3"
   }
 }
