--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
+    "highlight.js": "^11.9.0",
     "mongoose": "^8.1.1",
     "nodemon": "^3.0.3"
   }
