--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "highlight.js": "^11.9.0",
+    "method-override": "^3.0.0",
     "mongoose": "^8.1.1",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "uuid": "^9.0.1"
   }
 }
